[project]
name = "geoai"
version = "0.1.0"
description = "This is a Python package for GeoAI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.14",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
